Use postgresql as the db serverless deployment. Update table difinitions to be compatible with postgresql.

--- a/.env
+++ b/.env
@@ -1,2 +1,8 @@
 JWT_SECRET_KEY = "Secret1"
 JWT_REFRESH_SECRET_KEY = "Secret2"
+
+DATABASE_NAME = "tracker_ai_dev"
+DATABASE_USERNAME = "dev"
+DATABASE_PASSWORD = "changeme407"
+DATABASE_HOST = "localhost"
+DATABASE_PORT = "5433"
